wp-content/themes/ideum/stylesheets/components/_content.scss
/* ... */
#directions-dialog {
  padding:20px;
  text-align:center;
}

.layout-sidebar.member-details .img-circular {
  margin: 0 0 20px 0;
}

.follow-share, .social-share, #directions-dialog {
  /* no op */
  #ideum-icon {
    margin-bottom: 16px;
  }
  
  p {
    margin-bottom: 24px;
  }

  .sharing-icon {
    margin:0 17px;
    width: 44px;

    &:hover {
      opacity:0.7;
    }

  }

  input {
    margin:0 auto $gutter;
    max-width: 300px;
  }

}

.two-column-text {
  @include span-columns(10);
  @include shift(1);

  @include media($medium-screen-up) {
    @include column-count(2);
    @include column-gap(40px); // this should be 1 column gutter, but how?
  }

  padding:0 0 $gutter;
  text-align: justify;

  &.no-justification {
    text-align: left;
  }

  &.center {
    text-align: center;
  }

}

.one-column-text {
  @include span-columns(10);
  @include shift(1);

  padding:0 0 $gutter;
  text-align: justify;

  &.no-justification {
    text-align: left;
  }

  &.center {
    text-align: center;
  }

}

.error-page {
  border:2px solid $very-dark-red;
  position:relative;
  
  h1, h2, h3, h4, p { 
    margin-bottom:20px;
  }

  h1 { 
    color: $very-dark-red; 
  }

  ul {
    li {
      margin-bottom:12px;
    }
  }

}

.faux-link {
  color: $base-link-color;
  text-decoration: none;
}

.light-link-color {
  .faux-link {
    color: $light-accent-color;
  }
}

.hidden {visibility: hidden;}

.download-open-exhibits {
  @include media($small-screen-up) {
    display: none !Important;
  }
  @include media($large-screen-up) {
    display: inline-block !Important;
  }
}

.select2-search {
  display: none;
}

img {
  &.aligncenter {
    display:block;
    float: none;
    margin: 20px auto !important;
  }
  &.alignright {
    float: right;
  }
}

.subfooter-scripts {
  img {
    position: absolute;
  }
}

.archive.category #footer .main nav.footer-nav li.page-share, 
.archive.tag #footer .main nav.footer-nav li.page-share, 
.archive.post-type-archive-ideum_project #footer .main nav.footer-nav li.page-share {
  display: none;
}

/* ### CUSCO ###*/

h2.secondaryTitle {
  font-size: 36px;
  font-weight: 300;
  margin: 36px 0px 0px;
}
.panoWrap {
  border: 1px dashed #CCC;
  border-radius: 20px;
  margin-bottom: 30px;
  overflow: auto; /* stupid hack to force content to stay in container */
  padding: 20px;
}
.panoWrap h2 {
  clear: none;
  color: #444;
  margin: -10px 0px 0px;
}
.panoWrap img {
  float: left;
  margin: 0px 20px 0px 0px;
}
.view-cusco .follow-button-wrap, .view-cusco .foot-chat, .view-cusco .layout-contact-sidebar.contact-details  { display:none !Important; }
#mobile-slideout-menu ul > li.current-menu-item, #mobile-slideout-menu ul > li.page-item-14496, #footer .main nav.sitemap li.page-share.view-cusco, #footer .main nav.footer-nav li.page-share.view-cusco { display:none; }

// msie fixes
html[data-useragent*='Trident'] #header .header-image .page-intro.no-image.centered-intro .page-intro-inner h1 { position: relative; top: -25%; }
html[data-useragent*='Trident'] .chat.foot-chat { display: block !important; margin: 0 auto;}
html[data-useragent*='Trident'] .overlay nav a { letter-spacing: -.5px; }
html[data-useragent*='Trident'] .featured-page .content.team-n-clients .txt-wrap { padding:0 10%; width: 100%;} 
html[data-useragent*='Trident'] .featured-page .content.team-n-clients .txt-wrap .footer {position: relative;}
html[data-useragent*='Trident'] .contact-content .inquiry-form .inquiry-content form .right-label { margin-top: -0px;}
// Safari Fixes
html[data-useragent*='Safari'] .talking-points .point .point-text { margin-left: 0; } 
html[data-useragent*='Safari'] .blog-post-detail .content-wrapper .pull-quote .pull-quote-txt h2 { 
  @include media($medium-screen-up) {
    padding-top:20%;
  }
}
// Silk Fix (only required because of 'Safari' string in Silk user-agent)
html[data-useragent*='Silk'] .blog-post-detail .content-wrapper .pull-quote .pull-quote-txt h2 { 
  @include media($medium-screen-up) {
    padding-top: 0; 
  }
}
// Chrome Fix (only required because of 'Safari' string in Chrome user-agent)
html[data-useragent*='Chrome'] .blog-post-detail .content-wrapper .pull-quote .pull-quote-txt h2 { 
  @include media($medium-screen-up) {
    padding-top: 0; 
  }
}

